Fix nav bar layout issue for smaller displays in errai-security-demo.

--- a/errai-demos/errai-security-demo/src/main/webapp/bootstrap/css/bootstrap-responsive.css
+++ b/errai-demos/errai-security-demo/src/main/webapp/bootstrap/css/bootstrap-responsive.css
@@ -397,7 +397,6 @@
     clear: left;
   }
   .navbar .nav {
-    float: none;
     margin: 0 0 9px;
   }
   .navbar .nav > li {
